fix cannot scroll down on mobile

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     padding: 20px;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
-    touch-action: pan-x;
+    touch-action: pan-x pan-y;
 }
 
 .container {
